# informatics-tutor

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.celery  Dockerfile.frontend  Dockerfile.ts  README.md  docker-compose.yml
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ClassroomCard.tsx  CodeModal.tsx  ConfirmModal.tsx  CreateClassModal.tsx  HomeworkItem.tsx  HomeworkList.tsx  HomeworkTitle.tsx  HomeworkUploadForm.tsx  InviteLinkModal.tsx  JoinClassModal.tsx  Pagination.tsx  SideBar.tsx  SolutionItem.tsx  SolutionsBlock.tsx  StatsTable.tsx  TaskHeader.tsx  TaskItem.tsx  TaskList.tsx  TaskMainBlock.tsx  TaskSidebarList.tsx  TaskStatusIndicator.tsx
frontend/src/pages/: Auth.tsx  (+8 more)
main_app/: .env.example  pyproject.toml  requirements.txt
main_app/application/application/: celery.py  settings.py  urls.py  utils.py
main_app/application/classrooms/: models.py  serializers.py  urls.py  utils.py  validators.py  views.py
main_app/application/homeworks/: serializers.py  urls.py  utils.py  views.py
main_app/application/ping/: urls.py  views.py
main_app/application/tasks/: celery_tasks.py  urls.py  views.py
main_app/application/tests/: file1.py  file2.py  file3.py  image.py  test_classrooms.py  test_homeworks.py  test_ping.py  test_solutions.py  test_user.py
main_app/application/users/: models.py  serializers.py  urls.py  validators.py  views.py
testing_system/: .env.example  Dockerfile  pyproject.toml  requirements.txt
testing_system/app/: main.py
(+19 files in other folders)
