[project]
name = "main-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.2",
    "django>=5.2",
    "django-filter>=25.1",
    "django-minio-backend>=3.8.0",
    "django-redis>=5.4.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "gunicorn>=23.0.0",
    "markdown>=3.8",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
]
